--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,10 @@ android {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     implementation 'com.google.firebase:firebase-analytics'
