--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".GoogleAuth">
+
+        </activity>
+        <activity android:name=".DashboardActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
