Fixed some problems with the user registration. Began work on the user details form.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".GoogleAuth">
-
         </activity>
         <activity android:name=".DashboardActivity">
+
+        </activity>
+        <activity android:name=".UserDetailsActivity">
 
         </activity>
 
