--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
 
         </activity>
 
+        <activity android:name=".CreateExerciseActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
