update: started implementing exercises json manipulation and template workout form

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,15 @@
 
         </activity>
 
+        <activity android:name=".CreateWorkoutActivity">
+
+        </activity>
+
+        <activity android:name=".AddExerciseActivity">
+
+        </activity>
+
+
     </application>
 
 </manifest>
