Added context manager for the app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Fitwork">
+        android:theme="@style/Theme.Fitwork"
+        android:name="com.example.fitwork.ContextManager">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,7 +46,6 @@
         <activity android:name=".AddExerciseActivity">
 
         </activity>
-
 
     </application>
 
