Added user proportions history. Added user progress graphs.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,24 +18,26 @@
         </activity>
         <activity android:name=".GoogleAuth">
         </activity>
+
         <activity android:name=".DashboardActivity">
-
         </activity>
+
         <activity android:name=".UserDetailsFirstActivity">
-
         </activity>
+
         <activity android:name=".UserDetailsSecondActivity">
-
         </activity>
+
         <activity android:name=".UserDetailsThirdActivity">
-
         </activity>
-        <activity android:name=".UserDetailsActivity">
 
+        <activity android:name=".UserDetailsActivity">
         </activity>
 
         <activity android:name=".CreateExerciseActivity">
+        </activity>
 
+        <activity android:name=".LineChartActivity">
         </activity>
 
     </application>
